feat(validations): add min and max validators for swagger
Swagger cant read our custom validators yet
